[project]
name = "audio-processor-api"
version = "1.0.0"
description = "Async FastAPI-based audio processing service with AudioAlter integration"
readme = "README.md"
authors = [
    {name = "ISmartCoder", email = "abirxdhackz@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "uvloop>=0.19.0",
    "aiofiles>=23.2.0",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "cloudscraper>=1.2.71",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
audio-processor-api = "api:main"  # Changed from 'app' to a more descriptive name

[project.urls]
Homepage = "https://github.com/ISmartCoder/audio-processor-api"
Repository = "https://github.com/ISmartCoder/audio-processor-api"
Issues = "https://github.com/ISmartCoder/audio-processor-api/issues"
Documentation = "https://github.com/ISmartCoder/audio-processor-api#readme"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "templates*", "static*"]  # Include necessary directories
exclude = ["tests*", "test*", "docs*", "examples*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
